version/0.12/_sources/api/solver/_autosummary/settings/fluxes.rst.txt
:orphan:

.. _fluxes:

fluxes
======

.. currentmodule:: ansys.fluent.core.solver.settings_231.fluxes

.. autoclass:: fluxes
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

======================================================   =====================================================

Command                                                                                                Summary

======================================================   =====================================================
:ref:`mass_flow <mass_flow_1>`                                     Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer_1>`                                 Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`        Print sensible heat transfer rate at boundaries.

:ref:`rad_heat_trans <rad_heat_trans>`                       Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                    Print film heat transfer rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                          Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                      Print viscous work rate at boundaries.

======================================================   =====================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`report <report_1>`       'report' child.

========================   ===================

